--- a/src/main/resources/templates/modals/perfil.html
+++ b/src/main/resources/templates/modals/perfil.html
@@ -18,7 +18,7 @@
     </div>
   </header>
 
-  <form id="formularioPerfil" th:action="${modo=='EDICION'}?@{/perfil/edicion}:@{/perfil/registraUsuario}" method="POST">
+  <form id="formularioPerfil" th:action="${modo=='EDICION'}?@{/perfil/edicion}:@{/perfil/registra}" method="POST">
 
       <!-- Nombre de la cuenta (CREACION, EDICION) -->
       <div class="divCentrado" th:if="${modo} eq 'CREACION' or ${modo} eq 'EDICION'">
@@ -38,9 +38,9 @@
       <!-- Contraseña (CREACION, EDICION) -->
       <div class="divCentrado" th:if="${modo} eq 'CREACION' or ${modo} eq 'EDICION'">
         <h2 class="w3-padding-24">Contraseña</h2>
-        <input th:if="${modo} eq 'CREACION'" type="password" name="pass" placeholder="Introduzca su contraseña"
+        <input th:if="${modo} eq 'CREACION'" type="password" name="pass1" placeholder="Introduzca su contraseña"
           required></input>
-        <input th:if="${modo} eq 'EDICION'" type="password" name="pass" placeholder="Introduzca su  nueva contraseña"
+        <input th:if="${modo} eq 'EDICION'" type="password" name="pass2" placeholder="Introduzca su  nueva contraseña"
           required></input>
         <br>
         <input th:if="${modo} eq 'CREACION'" type="password" name="pass" placeholder="Repita la contraseña"
@@ -176,10 +176,11 @@
       <!-- Botones -->
       <button th:if="${modo} eq 'EDICION'" class="w3-btn btnColor w3-margin" type="submit">Guardar cambios</button>
       <button th:if="${modo} eq 'CREACION'" class="w3-btn btnColor w3-margin" id="botonRegistrarseUsuario" type="submit">Registrar usuario</button>
-      <button th:if="${modo} eq 'VISTA'" class="w3-btn btnColor w3-margin" onclick="document.getElementById('modal').style.display='none'">Cerrar perfil</button>
 
   </form>
-  
+ <div class="divCentrado">
+        <button th:if="${modo} eq 'VISTA'" class="w3-btn btnColor w3-margin" onclick="document.getElementById('modal').style.display='none'">Cerrar perfil</button>
+ </div>
 </body>
 
 </html>
