--- a/src/main/resources/templates/contrataciones.html
+++ b/src/main/resources/templates/contrataciones.html
@@ -110,7 +110,7 @@
 							</div>
 							<div style="text-align:center;">
 								<button class="w3-btn btnColor w3-margin btnDetalles" th:attr="data-id=${c.propuesta.id}">Detalles</button>
-								<button class="w3-btn btnColor w3-margin btnValorar" th:attr="data-id=${c.id}">Valorar</button>
+								<button class="w3-btn btnColor w3-margin btnValorar" th:attr="data-id=${c.propuesta.id}">Valorar</button>
 
 							</div>
 						</div>
