--- a/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
@@ -5,8 +5,7 @@
 			
 			<!-- Imagen-->
 			<div class="imagen" th:attr="data-id=${u.id}">
-				<img src="img/profile.png"
-					class="w3-hover-opacity imgPerfilBusqueda">
+				<img src="img/profile.png" class="w3-hover-opacity imgPerfilBusqueda">
 			</div>
 
 			<!-- Nombre Usuario -->
