--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -17,7 +17,7 @@
         <div class="title w3-display-container">
             
             <!-- Logo -->
-            <a class="logo w3-display-topleft" href="/inicio">INFLUENCING</a>
+            <a class="logo w3-hover-text-white w3-display-topleft" href="/inicio">INFLUENCING</a>
             
             <!-- Titulo Pagina -->
             <div class="w3-display-bottommiddle tituloPag">
@@ -77,7 +77,7 @@
         <div class="w3-section w3-bottombar wFilter3-padding-16 tagsList">
             <span class="w3-margin-right">Trending topics:</span>
             <button class="w3-button w3-blue tagFilterSelected" th:attr="data-id='ALL'">ALL</button>
-            <button class="w3-button w3-white tagFilter" th:attr="data-id='Moda'"><i class="fa fa-diamond w3-margin-right"></i>Moda</button>
+            <button class="w3-button w3-white tagFilter" th:attr="data-id='Moda'"><i class="fa fa-tshirt w3-margin-right"></i>Moda</button>
             <button class="w3-button w3-white w3-hide-small tagFilter" th:attr="data-id='Videojuegos'"><i
                     class="fa fa-gamepad w3-margin-right"></i>Videojuegos</button>
             <button class="w3-button w3-white w3-hide-small tagFilter" th:attr="data-id='Viajes'"><i
@@ -86,7 +86,7 @@
                     class="fa fa-leaf w3-margin-right"></i>Naturaleza</button>
             <button class="w3-button w3-white w3-hide-small tagFilter" th:attr="data-id='Música'"><i
                     class="fa fa-music w3-margin-right"></i>Música</button>
-            <input type="text" placeholder="Search.." id="cuadroBusquedaTagBar">
+            <input type="text" placeholder="Buscar..." id="cuadroBusquedaTagBar">
         </div>
     </div>
 
