--- a/src/main/resources/templates/modals/perfil.html
+++ b/src/main/resources/templates/modals/perfil.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="es">
-
 <head>
   <th:block th:replace="fragments/head.html :: header" />
   <link rel="stylesheet" type="text/css" href="css/perfil.css" />
-  
 </head>
 
 <body>
+
   <!-- Header -->
   <header>
     <div th:if="${modo} eq 'VISTA' or ${modo} eq 'EDICION'">
@@ -18,56 +15,58 @@
     </div>
   </header>
 
+  <!-- Contenido perfil -->
   <form id="formularioPerfil" th:action="${modo=='EDICION'}?@{/perfil/edicion}:@{/perfil/registra}" method="POST">
 
-      <!-- Nombre de la cuenta (CREACION, EDICION) -->
-      <div class="divCentrado" th:if="${modo} eq 'CREACION' or ${modo} eq 'EDICION'">
-        <h2 class="w3-padding-24">Nombre Cuenta</h2>
-        <input th:if="${modo} eq 'CREACION'" type="text" name="nombreCuenta" placeholder="Introduzca su usuario" required></input>
-        <span th:if="${modo} eq 'EDICION'" th:text="${usuario.nombreCuenta}" class="w3-padding-24">Nombre Cuenta</span>
-      </div>
+    <!-- Nombre de la cuenta (CREACION, EDICION) -->
+    <div class="divCentrado" th:if="${modo} eq 'CREACION' or ${modo} eq 'EDICION'">
+      <h2 class="w3-padding-24">Nombre Cuenta</h2>
+      <input th:if="${modo} eq 'CREACION'" type="text" name="nombreCuenta" placeholder="Introduzca su usuario"
+        required></input>
+      <span th:if="${modo} eq 'EDICION'" th:text="${usuario.nombreCuenta}" class="w3-padding-24">Nombre Cuenta</span>
+    </div>
 
 
-      <!-- Nombre Perfil -->
-      <h2 class="w3-padding-24">Nombre Perfil</h2>
-      <span th:if="${modo} eq 'VISTA'" th:text="${usuario.nombre}">Nombre Perfil</span>
-      <input th:if="${modo} eq 'EDICION'" type="text" name="nombre"  th:value="${usuario.nombre}" required></input>
-      <input th:if="${modo} eq 'CREACION'" type="text" name="nombre" placeholder="Introduzca su nombre" required></input>
+    <!-- Nombre Perfil -->
+    <h2 class="w3-padding-24">Nombre Perfil</h2>
+    <span th:if="${modo} eq 'VISTA'" th:text="${usuario.nombre}">Nombre Perfil</span>
+    <input th:if="${modo} eq 'EDICION'" type="text" name="nombre" th:value="${usuario.nombre}" required></input>
+    <input th:if="${modo} eq 'CREACION'" type="text" name="nombre" placeholder="Introduzca su nombre" required></input>
 
 
-      <!-- Contraseña (CREACION, EDICION) -->
-      <div class="divCentrado" th:if="${modo} eq 'CREACION' or ${modo} eq 'EDICION'">
-        <h2 class="w3-padding-24">Contraseña</h2>
-        <input th:if="${modo} eq 'CREACION'" type="password" name="pass1" placeholder="Introduzca su contraseña"
-          required></input>
-        <input th:if="${modo} eq 'EDICION'" type="password" name="pass2" placeholder="Introduzca su  nueva contraseña"
-          required></input>
-        <br>
-        <input th:if="${modo} eq 'CREACION'" type="password" name="pass" placeholder="Repita la contraseña"
-          required></input>
-        <input th:if="${modo} eq 'EDICION'" type="password" name="pass" placeholder="Repita la nueva contraseña"
-          required></input>
-      </div>
+    <!-- Contraseña (CREACION, EDICION) -->
+    <div class="divCentrado" th:if="${modo} eq 'CREACION' or ${modo} eq 'EDICION'">
+      <h2 class="w3-padding-24">Contraseña</h2>
+      <input th:if="${modo} eq 'CREACION'" type="password" name="pass1" placeholder="Introduzca su contraseña"
+        required></input>
+      <input th:if="${modo} eq 'EDICION'" type="password" name="pass2" placeholder="Introduzca su  nueva contraseña"
+        required></input>
+      <br>
+      <input th:if="${modo} eq 'CREACION'" type="password" name="pass" placeholder="Repita la contraseña"
+        required></input>
+      <input th:if="${modo} eq 'EDICION'" type="password" name="pass" placeholder="Repita la nueva contraseña"
+        required></input>
+    </div>
 
 
-      <!-- Imagen -->
-      <h2 class="w3-padding-24">Imagen Perfil</h2>
-      <div class="w3-center" th:if="${modo} eq 'VISTA'">
-        <img id="imagen-perfil" src="img/profile.png">
-      </div>
-      <div class="w3-center" th:if="${modo} eq 'EDICION'">
-        <img id="imagen-perfil" src="img/profile.png">
-        <!-- ¿Boton para borrar la foto? -->
-      </div>
-      <div th:if="${modo} eq 'CREACION'">
-        <input type="file" name="imagenPerfil">
-      </div>
+    <!-- Imagen -->
+    <h2 class="w3-padding-24">Imagen Perfil</h2>
+    <div class="w3-center" th:if="${modo} eq 'VISTA'">
+      <img id="imagen-perfil" src="img/profile.png">
+    </div>
+    <div class="w3-center" th:if="${modo} eq 'EDICION'">
+      <img id="imagen-perfil" src="img/profile.png">
+      <!-- ¿Boton para borrar la foto? -->
+    </div>
+    <div th:if="${modo} eq 'CREACION'">
+      <input type="file" name="imagenPerfil">
+    </div>
 
 
-      <!-- Valoracion (VISTA, EDICION) -->
-      <div class="divCentrado" th:if="${modo} eq 'VISTA' or ${modo} eq 'EDICION'">
-        <div class="score" th:if="${usuario.score != null}">
-          <th:block th:each="i: ${#numbers.sequence(1, usuario.score)}">					
+    <!-- Valoracion (VISTA, EDICION) -->
+    <div class="divCentrado" th:if="${modo} eq 'VISTA' or ${modo} eq 'EDICION'">
+      <div class="score" th:if="${usuario.score != null}">
+        <th:block th:each="i: ${#numbers.sequence(1, usuario.score)}">					
           <i class="fa fa-star w3-margin-right"></i>
           </th:block>
         </div>
@@ -173,14 +172,15 @@
 
       </div>
 
-      <!-- Botones -->
+      <!-- Botones interactivos -->
       <button th:if="${modo} eq 'EDICION'" class="w3-btn btnColor w3-margin" type="submit">Guardar cambios</button>
       <button th:if="${modo} eq 'CREACION'" class="w3-btn btnColor w3-margin" id="botonRegistrarseUsuario" type="submit">Registrar usuario</button>
 
   </form>
- <div class="divCentrado">
-        <button th:if="${modo} eq 'VISTA'" class="w3-btn btnColor w3-margin" onclick="document.getElementById('modal').style.display='none'">Cerrar perfil</button>
- </div>
-</body>
 
-</html>
+  <!-- Boton de cerrar -->
+  <div class="divCentrado">
+    <button th:if="${modo} eq 'VISTA'" class="w3-btn btnColor w3-margin" onclick="document.getElementById('modal').style.display='none'">Cerrar perfil</button>
+  </div>
+
+</body>
