--- a/src/main/resources/templates/modals/perfil.html
+++ b/src/main/resources/templates/modals/perfil.html
@@ -16,7 +16,7 @@
   </header>
 
   <!-- Contenido perfil -->
-  <form id="formularioPerfil" th:action="${modo=='EDICION'}?@{/perfil/edicion}:@{/perfil/registra}" method="POST">
+  <form id="formularioPerfil" th:action="${modo=='EDICION'}?@{/perfil/edicion}:@{/perfil/registra}" method="POST" enctype="multipart/form-data">
 
     <!-- Nombre de la cuenta (CREACION, EDICION) -->
     <div class="divCentrado" th:if="${modo} eq 'CREACION' or ${modo} eq 'EDICION'">
@@ -62,6 +62,14 @@
       <input type="file" name="imagenPerfil">
     </div>
 
+	<div th:if="${modo} eq 'CREACION'">
+	<h2 class="w3-padding-24">Tipo de cuenta</h2>
+	<select class="w3-select w3-border" id="tipoCuenta" name="tipoCuenta" required>
+    <option value="" disabled selected>Elige tu tipo de cuenta</option>
+    <option value="Influencer">Influencer</option>
+    <option value="Empresa">Empresa</option>
+	</select>
+	</div>
 
     <!-- Valoracion (VISTA, EDICION) -->
     <div class="divCentrado" th:if="${modo} eq 'VISTA' or ${modo} eq 'EDICION'">
@@ -98,7 +106,8 @@
         </div>
       </div>
       <!-- Hacer historial de propuestas con query en el modelo -->
-
+	
+	<div  class="divCentrado" id="divPerfilesCreacion">
       <!-- Edad -->
       <h2 class="w3-padding-24">Edad media de los seguidores</h2>
       <div id="edad" th:if="${modo} eq 'VISTA'">
@@ -106,11 +115,11 @@
       </div>
 
       <div id="edad" th:if="${modo} eq 'EDICION'">
-        <input type="number" name="edad" min="0" max="100" value="Años de media" th:value="${usuario.edad}" required>
+        <input type="number" name="edad" min="0" max="100" value="Años de media" th:value="${usuario.edad}">
       </div>
 
       <div id="edad" th:if="${modo} eq 'CREACION'">
-        <input type="number" name="edad" min="0" max="100" placeholder="Años de media" required>
+        <input type="number" name="edad" min="0" max="100" placeholder="Años de media">
       </div>
 
       <!-- Seguidores-->
@@ -171,6 +180,8 @@
         </div>
 
       </div>
+	</div>
+
 
       <!-- Botones interactivos -->
       <button th:if="${modo} eq 'EDICION'" class="w3-btn btnColor w3-margin" type="submit">Guardar cambios</button>
