Avances ficheros de foto, registro, visualizacion de propuesta y apuntarse a una propuesta

--- a/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
@@ -20,7 +20,7 @@
 
 			<!-- Tags -->
 			<div th:each="tag: ${u.tags}">
-				<button class="w3-button w3-white tags" th:text="${tag}">Tag</button>
+				<button class="w3-button w3-white tags tagFilter" th:attr="data-id=${tag}" th:text="${tag}">Tag</button>
 			</div>
 			
 			<!-- Detalles-->
