--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
       <button class="w3-btn btnColor w3-margin" type="submit">Entrar</button>
     </form>
     <a id="registroLogin"><u>Registro</u></a>
-	<p th:text="${mensaje}"></p>
+	<p th:text="${mensaje}" id="mensajeInfo" hidden></p>
   </div>
 
   <!-- Modal de Registro-->
