--- a/src/main/resources/templates/modals/propuesta.html
+++ b/src/main/resources/templates/modals/propuesta.html
@@ -57,7 +57,8 @@
       <h2>Edad objetivo</h2>
       <p>Edades comprendidas entre
 
-        <select id="edades" name="edades" th:if="${modo} eq 'ULTIMATUM' or ${modo} eq 'CREACION'">
+        <select id="edades" name="edades" th:if="${modo} eq 'ULTIMATUM' or ${modo} eq 'CREACION'" required>
+    	<option value="" disabled selected>Elige la edad objetivo</option>
           <option value="5-10">5 - 10</option>
           <option value="10-15">10 - 15</option>
           <option value="15-20">15 - 20</option>
@@ -90,7 +91,8 @@
         <input type="file" name="imagenPropuesta" required>
       </span>
       <img th:if="${modo} eq 'VISTA' or ${modo} eq 'ULTIMATUM' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'" id="imagen-propuesta"
-        src="img/sonyLogo.png">
+        th:src="@{/propuesta/{id}/photo(id=${propuesta.id})}">
+
     </div>
 
     <!-- Tags -->
