Arreglo contrataciones, reestructurado y css chat

--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -73,7 +73,7 @@
 
 
     <!-- TAGBAR -->
-    <div th:fragment="tagBar">
+    <div th:fragment="tagBar" class="w3-display-container">
         <div class="w3-section w3-bottombar wFilter3-padding-16 tagsList">
             <span class="w3-margin-right">Trending topics:</span>
             <button class="w3-button w3-blue tagFilterSelected" th:attr="data-id='ALL'">ALL</button>
