--- a/src/main/resources/static/css/negociacion.css
+++ b/src/main/resources/static/css/negociacion.css
@@ -14,9 +14,11 @@
 }
 
 #contenidoChat{
+	background-color: rgba(110, 210, 221, 0.05);
 	border: solid 1pt lightgrey;
 	border-radius: 20px;
-	padding: 0 1em 0 1em;
+	padding: 1%;
+	margin: 1%
 }
 
 .seleccionada{
@@ -27,20 +29,27 @@
 	border: 1px solid;
 	box-shadow: 0 1px 3px -2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 	border-radius: 20px;
-	margin: 0.5em 0.5em 0.5em 2em;
-	padding: 0.5em !important;
 	background-color: #f9f9f9c4;
 	border: solid 1pt lightgrey;
 	width: 100%;
+
+	display: flex;
+    flex-direction: column;
+	justify-content: space-around;
+	margin: 1.5%;
 }
 
 
 
 .barraChat{
+	background-color: rgba(110, 210, 221, 0.2);
     display: flex;
     justify-content: space-between;
-    padding: 2em 10em 3em 2em;
-
+    padding: 2%;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+	margin-bottom: 1.5%;
+	border-bottom: 2px solid #6ed2dd7c;
 }
 
 .informacionChat{
@@ -84,14 +93,6 @@ ul {
 
 }
 
-.chat {
-    display: flex;
-    flex-direction: column;
-	justify-content: space-around;
-	padding: 0 2em 1em 2em !important;
-	margin-right: 2em;
-}
-
 .recibido {
 	text-align:left;
 }
@@ -100,10 +101,9 @@ ul {
 	text-align:right;
 }
 
-.perfil{
+.perfil {
 	font-size: 1.5em;
 	margin-bottom: 1em;
-	
 }
 
 .nombre{
