--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -28,13 +28,15 @@ a:hover{
 	margin: auto;
     padding: 6px;
     margin-top: 8px;
-    margin-right: 3%;
+    margin-right: 20%;
+    margin-left: 20%;
     border: none;
     font-size: 17px;
     height: 25px;
     border: 1px solid gray;
     border-radius: 10px;
-    width: 25%;
+    width: 40%;
+    min-width: 200px;
 }
 
 .btnColor {
@@ -71,11 +73,10 @@ a:hover{
     font-family: Aclonica;
     font-size: xxx-large;
     font-weight: bold;
-    margin-left: 1%;
     text-decoration: none;
 }
 
-.bodyLogin {
+#bodyLogin {
     padding-top: 40px;
     padding-bottom: 40px;
     background-color: #eee;
