--- a/src/main/resources/templates/fragments/resultadoBusquedaContrataciones.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaContrataciones.html
@@ -1,15 +1,15 @@
-<h2 style="margin: 2%;">Resultado de la búsqueda</h2>
-<div th:if="${not #lists.isEmpty(resultadoBusqueda)}">
-	<div th:each="c: ${resultadoBusqueda}" class="w3-row-padding">
+<div id="divContrataciones">
+	<h2 style="margin: 2%;" th:if="${not #lists.isEmpty(candidaturasEnVigor)}">Contrataciones en vigor</h2>
+	<div th:each="c: ${candidaturasEnVigor}" class="w3-row-padding">
 		<div style="display:block;">
 			<div class="w3-third w3-container w3-margin-bottom box" style="width: 97%">
 				<div class="firstCol">
 					<div class="w3-third w3-container fecha">
-						<p>Fecha inicio - Fecha fin</p>
+						<p><span th:text="${c.propuesta.fechaInicio}">Fecha inicio</span> - <span th:text="${c.propuesta.fechaFin}">Fecha fin</span></p>
 						<p th:text="${c.estado}">ESTADO</p>
 					</div>
 					<div>
-						<img src="img/sonyLogo.png" style="width:100%">
+						<img th:src="@{/propuesta/{id}/photo(id=${c.propuesta.id})}" style="width:100%">
 					</div>
 				</div>
 				<div class="info">
@@ -36,7 +36,8 @@
 							pharetra nec, mattis ac neque. Duis vulputate commodo lectus...</p>
 					</div>
 					<div style="text-align:center;">
-						<button class="w3-btn btnColor w3-margin">Detalles</button>
+						<button class="w3-btn btnColor w3-margin btnDetalles"
+							th:attr="data-id=${c.propuesta.id}">Detalles</button>
 					</div>
 
 				</div>
@@ -45,7 +46,54 @@
 		</div>
 
 	</div>
-</div>
-<div th:if="${#lists.isEmpty(resultadoBusqueda)}">
-	<h2>No existen contrataciones</h2>
+
+	<h2 style="margin: 2%;" th:if="${not #lists.isEmpty(candidaturasPendientes)}">Contrataciones pendientes de valorar
+	</h2>
+
+	<div th:each="c: ${candidaturasPendientes}" class="w3-row-padding">
+		<div style="display:block;">
+			<div class="w3-third w3-container w3-margin-bottom box" style="width: 97%">
+				<div class="firstCol">
+					<div class="w3-third w3-container fecha">
+						<p><span th:text="${c.propuesta.fechaInicio}">Fecha inicio</span> - <span th:text="${c.propuesta.fechaFin}">Fecha fin</span></p>
+						<p th:text="${c.estado}">ESTADO</p>
+					</div>
+					<div>
+						<img th:src="@{/propuesta/{id}/photo(id=${c.propuesta.id})}" style="width:100%">
+					</div>
+				</div>
+				<div class="info">
+					<h2><b th:text="${c.propuesta.nombre}">Propuesta</b></h2>
+					<p><b>Empresa: </b></p>
+					<a th:text="${c.propuesta.empresa.nombre}">Company Name</a>
+					<p><b>Influencer: </b></p>
+					<a th:text="${c.candidato.nombre + ' '+ c.candidato.apellidos}">Influencer Name</a>
+				</div>
+				<div class="thirdCol">
+
+					<div class="description">
+						<h3><b>Descripción</b></h3>
+
+						<p class="descripText" th:text="${c.propuesta.descripcion}">Lorem ipsum dolor sit amet,
+							consectetur
+							adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis
+							vulputate commodo lectus...
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate
+							eu
+							pharetra nec, mattis ac neque. Duis vulputate commodo lectus...
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate
+							eu
+							pharetra nec, mattis ac neque. Duis vulputate commodo lectus...</p>
+					</div>
+					<div style="text-align:center;">
+						<button class="w3-btn btnColor w3-margin btnDetalles"
+							th:attr="data-id=${c.propuesta.id}">Detalles</button>
+						<button class="w3-btn btnColor w3-margin btnValorar"
+							th:attr="data-id=${c.propuesta.id}">Valorar</button>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
