--- a/src/main/resources/templates/negociacion.html
+++ b/src/main/resources/templates/negociacion.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    
+
     <!-- Header -->
     <header>
         <div th:replace="fragments/navigation.html :: navBar(nombrePagina='CHAT DE NEGOCIACIÓN')"></div>
@@ -44,7 +44,7 @@
 
             <!--Contenido Chat -->
             <div id="contenidoChat"></div>
-            <input id="botonEnviar" class="w3-input w3-border" type="text" placeholder="Introduzca su mensaje...">
+            <input id="botonEnviar" type="text" placeholder="Introduzca su mensaje...">
         </div>
     </div>
 
