--- a/src/main/resources/static/css/negociacion.css
+++ b/src/main/resources/static/css/negociacion.css
@@ -39,7 +39,21 @@
 	margin: 1.5%;
 }
 
+.msg{
+	background-color: rgba(110, 210, 221, 0.2);
+    border: 0.5px solid rgb(110, 210, 221, 0.5);
+    border-radius:20px;
+	padding: 1%;
+	word-wrap: break-word;
+}
 
+.recibido {
+	margin-right: 50%;
+}
+
+.enviado {
+	margin-left: 50%;
+}
 
 .barraChat{
 	background-color: rgba(110, 210, 221, 0.2);
@@ -48,8 +62,7 @@
     padding: 2%;
 	border-top-left-radius: 20px;
 	border-top-right-radius: 20px;
-	margin-bottom: 1.5%;
-	border-bottom: 2px solid #6ed2dd7c;
+	border-bottom: 2px solid rgb(110, 210, 221, 1);
 }
 
 .informacionChat{
@@ -58,9 +71,9 @@
 }
 
 input{
-    margin-top:2em !important;
 	border-radius: 20px;
-	padding-left: 1em;
+	padding-left: 1.5em;
+	border-color: rgb(110, 210, 221, 1);
 }
 
 
@@ -91,14 +104,6 @@ ul {
     flex-direction: column;
     justify-content: space-around;
 
-}
-
-.recibido {
-	text-align:left;
-}
-
-.enviado {
-	text-align:right;
 }
 
 .perfil {
