--- a/src/main/resources/templates/fragments/resultadoBusquedaContrataciones.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaContrataciones.html
@@ -24,16 +24,7 @@
 					<div class="description">
 						<h3><b>Descripción</b></h3>
 
-						<p style="line-height:25px;text-align: justify;" th:text="${c.propuesta.descripcion}">
-							Lorem ipsum dolor sit amet, consectetur
-							adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis
-							vulputate commodo lectus...
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate
-							eu
-							pharetra nec, mattis ac neque. Duis vulputate commodo lectus...
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate
-							eu
-							pharetra nec, mattis ac neque. Duis vulputate commodo lectus...</p>
+						<p style="line-height:25px;text-align: justify;" th:text="${c.propuesta.descripcion}"></p>
 					</div>
 					<div style="text-align:center;">
 						<button class="w3-btn btnColor w3-margin btnDetalles"
