Terminado publicar propuesta y arreglos validación registro

--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -76,7 +76,8 @@
 		</div>
 	</div>
  
-    
+        <!-- Mensaje de informacion -->
+	  <p th:text="${mensaje}" id="mensajeInfo" hidden></p>
 	<!-- Footer -->
     <footer th:replace="fragments/navigation.html :: footer"></footer>
     
