--- a/src/main/resources/templates/fragments/resultadoBusquedaPropuestas.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPropuestas.html
@@ -1,3 +1,10 @@
+
+<div th:if="${#lists.isEmpty(resultadoBusqueda)}" class="divCentrado">
+	<h3>No hay resultados</h3>
+</div>
+<div th:unless="${#lists.isEmpty(resultadoBusqueda)}">
+
+
 <div class="w3-row-padding">
 
 	<div th:each="prop: ${resultadoBusqueda}" class="w3-third w3-container w3-margin-bottom box">
@@ -10,10 +17,10 @@
 			</div>
 
 			<!-- Nombre Propuesta -->
-			<p><b th:text="${prop.nombre}">Proposal Name</b></p>
+			<p><b th:text="${prop.nombre}"></b></p>
 
 			<!-- Nombre empresa-->
-			<p>Compañia: <b th:text="${prop.empresa.nombre}" class="bNombreEmpresa" th:attr="data-id=${prop.empresa.id}">Company Name</b></p>
+			<p>Compañia: <b th:text="${prop.empresa.nombre}" class="bNombreEmpresa" th:attr="data-id=${prop.empresa.id}"></b></p>
 
 			<!-- Valoracion -->
 			<div class="score">
@@ -24,11 +31,11 @@
 
 			<!-- Tags -->
 			<div>
-				<button th:each="tag:${#strings.listSplit(prop.tags, ',')}" class="w3-button w3-white tags" th:text="${tag}"></button>
+				<button th:each="tag:${#strings.listSplit(prop.tags, ',')}" class="w3-button w3-white tags tagFilter" th:attr="data-id=${tag}" th:text="${tag}"></button>
 			</div>
 
 			<!-- Descripcion propuesta (limitar) -->
-			<p th:text="${prop.descripcion}">Praesent tincidunt sed tellus ut rutrum.</p>
+			<p th:text="${prop.descripcion}"></p>
 
 			<!-- Detalles-->
 			<button class="w3-btn btnColor w3-margin btnDetalles" th:attr="data-id=${prop.id}">Detalles</button>
@@ -40,3 +47,4 @@
 
 <!-- Paginacion -->
 <div th:replace="fragments/navigation.html :: pagination"></div>
+</div>
