Arreglado tag ALL

--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -76,7 +76,7 @@
     <div th:fragment="tagBar" class="w3-display-container">
         <div class="w3-section w3-bottombar wFilter3-padding-16 tagsList">
             <span class="w3-margin-right">Trending topics:</span>
-            <button class="w3-button w3-blue tagFilterSelected" th:attr="data-id='ALL'">ALL</button>
+            <button class="w3-button w3-blue tagFilter tagFilterSelected" th:attr="data-id=' ALL '">ALL</button>
             <button class="w3-button w3-white tagFilter" th:attr="data-id='Moda'"><i class="fa fa-tshirt w3-margin-right"></i>Moda</button>
             <button class="w3-button w3-white w3-hide-small tagFilter" th:attr="data-id='Videojuegos'"><i
                     class="fa fa-gamepad w3-margin-right"></i>Videojuegos</button>
